--- a/po/ja.po
+++ b/po/ja.po
@@ -1,5 +1,5 @@
 # gphoto2 ja.po.
-# Copyright © 2000-2002 Free Software Foundation, Inc.
+# Copyright (C) 2000-2002 Free Software Foundation, Inc.
 # Yukihiro Nakai <nakai@gnome.gr.jp>, 2000.
 # Takeshi Aihana <aihana@gnome.gr.jp>, 2001-2002.
 # AMANO Kazuhiro <haa13142@jnb.odn.ne.jp>, 2002.
