--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-13  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* po/eu.po: Updated thanks to dooteo <dooteo@euskalgnu.org>
+
 2005-01-17  Colin Marquardt  <colin@marquardt-home.de>
 
 	* po/ja.po: Update thanks to Takeshi AIHANA.
